--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 app = "sveltelab"
 kill_signal = "SIGINT"
 kill_timeout = 5
-primary_region = "lax"
+primary_region = "sea"
 processes = []
 
 [env]
